syntax = "proto3";

enum FolderEvent {
    CreateWorkspace = 0;
    ReadCurWorkspace = 1;
    ReadWorkspaces = 2;
    DeleteWorkspace = 3;
    OpenWorkspace = 4;
    ReadWorkspaceApps = 5;
    CreateApp = 101;
    DeleteApp = 102;
    ReadApp = 103;
    UpdateApp = 104;
    CreateView = 201;
    ReadView = 202;
    UpdateView = 203;
    DeleteView = 204;
    DuplicateView = 205;
    CopyLink = 206;
    OpenDocument = 207;
    CloseView = 208;
    ReadTrash = 300;
    PutbackTrash = 301;
    DeleteTrash = 302;
    RestoreAllTrash = 303;
    DeleteAllTrash = 304;
    ApplyDocDelta = 400;
    ExportDocument = 500;
}
